--- a/workshop_3/final_project.ipynb
+++ b/workshop_3/final_project.ipynb
@@ -28,10 +28,9 @@
       "\n",
       "1. Plot a dissociation curve for each.\n",
       "2. Fit a Lennard-Jones potential to each curve.\n",
-      "3. Plot the Lennard-Jones potential along with the data used for fitting for each graph.\n",
-      "4. Plot the dissociation energies ($V(r_m)$) versus the period of the dimer\n",
+      "3. Plot the Lennard-Jones potential along with the original dissociation curve.\n",
+      "4. Plot the dissociation energies ($V(r_m)$) versus the period of the dimer (1 for Helium, 2 for Argon, 3 for Helium, etc.)\n",
       "5. Plot the equilbrium bond length ($r_m$) versus the period of the dimer.\n",
-      "6. For bonus points see if you can figure out how to make a bar chart (which would be suitable here) rather than a linear plot by looking at the matplotlib online documentation.\n",
       "\n",
       "Additional information\n",
       "------\n",
@@ -41,22 +40,50 @@
       "\n",
       "$V(r) = 4 \\epsilon(( -(\\frac{\\sigma}{r})^6 + (\\frac{\\sigma}{r})^{12})$, at the minimia $0 =  \\frac{\\partial V(r)} {\\partial r} =  4 \\epsilon(( 6(\\frac{\\sigma}{r_m})^7 - 12(\\frac{\\sigma}{r_m})^{13})$, therefore  $r_m = 2^\\frac{1}{6} \\sigma$\n",
       "\n",
-      "So if you know the parameters that define the Lennard Jones potential you can immediately calculate the equilibirum bond length and then plug that in to the potential to compute the dissociation energy.\n",
+      "Similarly the value of the dissociation energy can be determined to be $V(r_m) = -\\epsilon$\n",
       "\n",
-      "1. No marks will be given for any explanation of the chemistry (so you don't need to worry about this).\n",
-      "2. Use the curve fitting example from workshop 3 - note the data files have a slightly different format to those in workshop 3:\n",
-      "3. Exclude points you feel are irrelavent (the Lennard-Jones potentail sometimes fails to desacribe short range behavior accuratly)\n",
-      "4. Try and write comments to make your code clearer (either in the code itself using # or by adding Raw text cells)\n",
-      "5. Use the lowest energy point for each curve as a guess for the minima, to find a guess for epsilion and sigma for the fitting function.\n",
-      "6. The data for each dimer is in a file like final_project_data/Ne2.out, final_project_data/He2.out ... and the data for each single point is in a file like final_project_data/Ne.out, final_project_data/He.out\n",
-      "7. The energy is given in a line like (for each point):"
+      "Thus if you know the parameters that define the Lennard Jones potential (sigma and epsilon) you can calculate the equilibrium bond length and dissociation energy.\n",
+      "\n",
+      "1. Use the curve fitting example from workshop 3\n",
+      "2. Try and write comments to make your code clearer (either in the code itself using # or by adding Raw text cells)\n",
+      "3. When we fit the data we need to supply an initial guess for epsilon and sigma if you like you can play around with this but a reasonable guess is to pick is pick the data point that is closes to the minimum and use that energy to give you the guess for epsilon and the dimer distance at that point to give you the guess for sigma. (Via the formula given above connecting the two)\n",
+      "4. The data the dimers are in final_project_data/He2.out, final_project_data/Ne2.out, etc. The data for the lone atoms are in final_project_data/He.out, final_project_data/He.out, etc.\n",
+      "5. In our earlier example the energy was printed inside the Ne2.out on lines with:"
      ]
     },
     {
-     "cell_type": "raw",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "'CCSD(T) total energy          ='"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Total Energy              =    -257.3508759806243802 [H]"
+      "Whilst in this project the energy is printed in the data files on lines with:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "'Total Energy              ='"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "\n",
+      "So you will have to adjust the code that extract the energies to reflect this change."
      ]
     },
     {
@@ -130,7 +157,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "If you've managed to extract a list of energies and a list of equilibrium bond lengths and are wondering how to plot a bar chart head to [Matplotlib gallery](http://matplotlib.org/gallery.html) and select the 'Lines, bars, and markers' option checking out the source code there should give you some ideas."
+      "If you've managed to extract a list of energies and a list of equilibrium bond lengths and are wondering how to plot a bar chart head to [Matplotlib gallery](http://matplotlib.org/gallery.html) and select the 'Lines, bars, and markers' option checking out the example code there should give you some ideas."
      ]
     },
     {
@@ -151,7 +178,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 67
     },
     {
      "cell_type": "markdown",
@@ -180,7 +208,7 @@
      "collapsed": false,
      "input": [
       "#extract the energies from a file containing multiple dimer energies\n",
-      "def extract_energies(data_file, atom_symbol):  \n",
+      "def extract_energies(data_file):  \n",
       "    '''\n",
       "    >>> extract_energy('final_project_data/He2.out')\n",
       "    [-5.76184784023732, -5.761916417982681, -5.761951314270527, -5.761967620501213, -5.761974162146721, -5.761975944492495, -5.761975676552606, -5.761974723999278, -5.761973702586694, -5.7619728384737465, -5.761972176212938, -5.7619716899322935, -5.76197133640903, -5.761971076455339, -5.761970880735439, -5.761970729233256, -5.761970608884886, -5.7619705112520805, -5.761970430791741, -5.761970363727911, -5.7619703073695705, -5.761970259713693, -5.761970219215967, -5.761970184655164, -5.761970155048887, -5.761970129597786, -5.761970107646291, -5.761970088653571, -5.761970072171287, -5.761970057826256, -5.76197004530662, -5.761970034350857]\n",
@@ -209,12 +237,26 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "from scipy.optimize import curve_fit\n",
       "def fit_lennard(energies, distances):\n",
       "    '''\n",
-      "    >>> fit_lennard()\n",
+      "    >>> fit_lennard(extract_energies('final_project_data/He2.out'), extract_distances('final_project_data/He2.out', 'HE')\n",
+      "    '''"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 74
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def disc_energy(epsilon):\n",
       "    '''\n",
-      "    guess = \n",
-      "    params, conv = curve_fit(lennard_jones, distances, energies, p0=(0.00018, 2.6))"
+      "    >>> disc_energy(1)\n",
+      "    -1\n",
+      "    '''"
      ],
      "language": "python",
      "metadata": {},
@@ -226,8 +268,8 @@
      "input": [
       "def eq_bond_length(sigma):\n",
       "    '''\n",
-      "    >>> eq_bond_length(0.123)\n",
-      "    12312\n",
+      "    >>> eq_bond_length(1)\n",
+      "    1.122462048309373\n",
       "    '''"
      ],
      "language": "python",
