Modified final project specification

--- a/workshop_3/final_project.ipynb
+++ b/workshop_3/final_project.ipynb
@@ -238,9 +238,11 @@
      "collapsed": false,
      "input": [
       "from scipy.optimize import curve_fit\n",
-      "def fit_lennard(energies, distances):\n",
+      "#fit a lennard jones potential to the dimer  \n",
+      "def fit_lennard(dimer_energies, atom_energy, distances):\n",
       "    '''\n",
-      "    >>> fit_lennard(extract_energies('final_project_data/He2.out'), extract_distances('final_project_data/He2.out', 'HE')\n",
+      "    >>> fit_lennard(extract_energies('final_project_data/He2.out'), extract_energy('final_project_data/He.out'), extract_distances('final_project_data/He2.out', 'HE')\n",
+      "    [8.4872954588499182e-06, 2.9008324718560048]\n",
       "    '''"
      ],
      "language": "python",
@@ -269,7 +271,7 @@
       "def eq_bond_length(sigma):\n",
       "    '''\n",
       "    >>> eq_bond_length(1)\n",
-      "    1.122462048309373\n",
+      "    0.8908987181403393\n",
       "    '''"
      ],
      "language": "python",
