Updated docstrings and related info

--- a/workshop_1/intro_to_python_exercises.ipynb
+++ b/workshop_1/intro_to_python_exercises.ipynb
@@ -19,7 +19,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "In these exercises you will write functions that perform a particular task. People often document their code by including strings inside functions that describe what the function does and what the arguments are. This string is included directly below the function signature, it has no effect on the processing the function performs.\n",
+      "In these exercises you will write functions that perform a particular task. People often document their code by including strings inside functions that describe what the function does and what the arguments are. This string is called a *docstring* as is included directly below the function signature, it has no effect on the processing the function performs.\n",
       "\n",
       "For the exercises we are using this string to specify how we want the function to behave. It shows examples of the function being used along with what output we expect to be produced. \n",
       "\n",
@@ -71,6 +71,13 @@
      "language": "python",
      "metadata": {},
      "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "NB when we solve the task by completing the function **we leave the docstring in place**."
+     ]
     },
     {
      "cell_type": "markdown",
