--- a/workshop_2/scientific_python_exercises.ipynb
+++ b/workshop_2/scientific_python_exercises.ipynb
@@ -19,7 +19,9 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "As in the previous workshops exercises you will write functions that perform a particular task. The docstring is used to specify how we want the function to behave."
+      "As in the previous workshops exercises you will write functions that perform a particular task. The docstring is used to specify how we want the function to behave. \n",
+      "\n",
+      "**NB. Leave the docstring we use it to perform some basic tests on your solutions!**"
      ]
     },
     {
@@ -27,7 +29,7 @@
      "collapsed": false,
      "input": [
       "def to_str(string_var):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> to_str(1)\n",
       "    '1'\n",
       "    >>>to_str([1,2])\n",
@@ -54,7 +56,7 @@
      "collapsed": false,
      "input": [
       "def to_str(string_var):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> to_str(1)\n",
       "    '1'\n",
       "    >>>to_str([1,2])\n",
@@ -146,7 +148,7 @@
      "collapsed": false,
      "input": [
       "def split_lines(contents):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> split_lines('First line\\nSecond line')\n",
       "    ['First line', 'Second line']\n",
       "    >>> split_lines('One line only')\n",
@@ -178,7 +180,7 @@
      "collapsed": false,
      "input": [
       "def join_lines(list_lines):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> join_lines(['First line', 'Second line'])\n",
       "    'First line\\nSecond line'\n",
       "    >>> join_lines(['One line only'])\n",
@@ -207,7 +209,7 @@
      "collapsed": false,
      "input": [
       "def clean_line(line_string):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> clean_line(First Second Third)\n",
       "    'Second'\n",
       "    >>> clean_line(First Second)\n",
@@ -238,7 +240,7 @@
      "collapsed": false,
      "input": [
       "def word_extractor(line_string, indices):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> word_extractor('Zero one two three four five six', [0,1,2])\n",
       "    'Zero one two'\n",
       "    >>> word_extractor('1. H 0.0 0.0 0.0 Flag1', [1,2,3,4])\n",
@@ -277,7 +279,7 @@
      "collapsed": false,
      "input": [
       "def print_file(file_name):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> print_file('test_file1.txt')\n",
       "    None\n",
       "    >>> print_file('test_file2.txt')\n",
@@ -306,13 +308,13 @@
      "collapsed": false,
      "input": [
       "def square_list(list_ints):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> square_list([0,1])\n",
-      "    [0,1]\n",
+      "    [0, 1]\n",
       "    >>> square_list([1,3,5])\n",
-      "    [1,9,25]\n",
+      "    [1, 9, 25]\n",
       "    >>> square_list([-1,-2,-3])\n",
-      "    [1,4,9]\n",
+      "    [1, 4, 9]\n",
       "    '''"
      ],
      "language": "python",
@@ -341,7 +343,7 @@
      "collapsed": false,
      "input": [
       "def write_squares(list_ints, file_name):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> write_squares([0,1,2,3], 'squares_1.txt')\n",
       "    None\n",
       "    >>> write_squares([-1,1,2], 'squares_2.txt')\n",
@@ -373,13 +375,13 @@
      "collapsed": false,
      "input": [
       "def read_squares(file_name):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> read_squares('squares_4.txt')\n",
-      "    [1,4,9]\n",
+      "    [1, 4, 9]\n",
       "    >>> read_squares('squares_5.txt')\n",
-      "    [1,1,4]\n",
+      "    [1, 1, 4]\n",
       "    >>> read_squares('squares_6.txt')\n",
-      "    [36,1,1,0]\n",
+      "    [36, 1, 1, 0]\n",
       "    '''"
      ],
      "language": "python",
@@ -413,10 +415,10 @@
      "collapsed": false,
      "input": [
       "def chars_before_comma(line_string):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> chars_before_comma('This a particularly dull sentence, why did they put it in this notebook?')\n",
       "    33\n",
-      "    >>> chars_before_comma('To be, or not to be, that is the question\u2014\\nWhether 'tis Nobler in the mind to suffer\\nThe Slings and Arrows of outrageous Fortune,\\nOr to take Arms against a Sea of troubles,\\nAnd by opposing end them?')\n",
+      "    >>> chars_before_comma(\"To be, or not to be, that is the question\u2014\\nWhether 'tis Nobler in the mind to suffer\\nThe Slings and Arrows of outrageous Fortune,\\nOr to take Arms against a Sea of troubles,\\nAnd by opposing end them?\")\n",
       "    5\n",
       "   '''"
      ],
@@ -441,13 +443,13 @@
      "collapsed": false,
      "input": [
       "def null_vector(vec_length):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> null_vector(1)\n",
       "    array([ 0.])\n",
       "    >>> null_vector(2)\n",
       "    array([ 0.,  0.])\n",
       "    >>> null_vector(4)\n",
-      "    array([ 0.,  0., 0., 0.])\n",
+      "    array([ 0.,  0.,  0.,  0.])\n",
       "   '''"
      ],
      "language": "python",
@@ -471,7 +473,7 @@
      "collapsed": false,
      "input": [
       "def checkboard():\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> checkboard()\n",
       "    array([[ 0.,  1.,  0.,  1.],\n",
       "       [ 1.,  0.,  1.,  0.],\n",
@@ -500,13 +502,18 @@
      "collapsed": false,
      "input": [
       "def matrix_from_lists(a,b,c):\n",
-      "    '''\n",
-      "    >>>matrix_from_lists([0,1],[0,1],[0,1])\n",
-      "    array([[0, 1],[0, 1],[0, 1]])\n",
-      "    >>>matrix_from_lists([0,1],[0,1]])\n",
-      "    array([[0, 1],[0, 1]])\n",
-      "    >>>matrix_from_lists([0,0,0],[1,1,1],[2,2,2])\n",
-      "    array([[0, 0, 0],[1, 1, 1],[2, 2, 2]])\n",
+      "    r'''\n",
+      "    >>> matrix_from_lists([0,1],[0,1],[0,1])\n",
+      "    array([[0, 1],\n",
+      "           [0, 1],\n",
+      "           [0, 1]])\n",
+      "    >>> matrix_from_lists([0,1],[0,1])\n",
+      "    array([[0, 1],\n",
+      "           [0, 1]])\n",
+      "    >>> matrix_from_lists([0,0,0],[1,1,1],[2,2,2])\n",
+      "    array([[0, 0, 0],\n",
+      "           [1, 1, 1],\n",
+      "           [2, 2, 2]])\n",
       "    '''"
      ],
      "language": "python",
@@ -532,7 +539,7 @@
      "collapsed": false,
      "input": [
       "gen_poly(x, a, b, c):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>>gen_poly(np.linspace(1,10,10), 1, 1, 0)\n",
       "    array([   2.,    6.,   12.,   20.,   30.,   42.,   56.,   72.,   90.,  110.])\n",
       "    >>>gen_poly(np.linspace(1,10,10), 2, 1, 0)\n",
@@ -565,7 +572,7 @@
      "collapsed": false,
      "input": [
       "def fit_poly(x,y):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>>fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 1, 1, 0) )\n",
       "    array([ 1.,  1.,  0.])\n",
       "    >>>fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 2, 1, 0) )\n",
@@ -598,7 +605,7 @@
      "collapsed": false,
      "input": [
       "def plot_data(x,a,b,c):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>> plot_data(np.linspace(1,10,100), 1, 1, 0)\n",
       "    None\n",
       "    '''"
@@ -644,7 +651,7 @@
      "collapsed": false,
      "input": [
       "def multi_plot_data(x,a,b,c):\n",
-      "    '''\n",
+      "    r'''\n",
       "    >>>multi_plot_data(np.linspace(1,10,100), 1, 1, 0)\n",
       "    None\n",
       "    '''"
