--- a/workshop_2/scientific_python_exercises.ipynb
+++ b/workshop_2/scientific_python_exercises.ipynb
@@ -32,15 +32,16 @@
       "    r'''\n",
       "    >>> to_str(1)\n",
       "    '1'\n",
-      "    >>>to_str([1,2])\n",
+      "    >>> to_str([1,2])\n",
       "    '[1,2]'\n",
-      "    >>>to_str('a')\n",
+      "    >>> to_str('a')\n",
       "    'a'\n",
       "    '''"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -59,16 +60,17 @@
       "    r'''\n",
       "    >>> to_str(1)\n",
       "    '1'\n",
-      "    >>>to_str([1,2])\n",
+      "    >>> to_str([1,2])\n",
       "    '[1,2]'\n",
-      "    >>>to_str('a')\n",
+      "    >>> to_str('a')\n",
       "    'a'\n",
       "    '''\n",
       "    return str(string_var)"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -85,7 +87,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -100,7 +103,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "markdown",
@@ -118,7 +122,8 @@
      "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 2
     },
     {
      "cell_type": "heading",
@@ -153,14 +158,14 @@
       "    ['First line', 'Second line']\n",
       "    >>> split_lines('One line only')\n",
       "    ['One line only']\n",
-      "    split_lines('First line\\n\\nThird line')\n",
+      "    >>> split_lines('First line\\n\\nThird line')\n",
       "    ['First line', '', 'Third line']\n",
       "    '''"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 32
+     "prompt_number": 3
     },
     {
      "cell_type": "markdown",
@@ -191,7 +196,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 4
     },
     {
      "cell_type": "markdown",
@@ -210,9 +216,9 @@
      "input": [
       "def clean_line(line_string):\n",
       "    r'''\n",
-      "    >>> clean_line(First Second Third)\n",
+      "    >>> clean_line('First Second Third')\n",
       "    'Second'\n",
-      "    >>> clean_line(First Second)\n",
+      "    >>> clean_line('First Second')\n",
       "    ''\n",
       "    >>> clean_line('1. 1 2 3 \\n')\n",
       "    '1 2 3'\n",
@@ -220,7 +226,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 5
     },
     {
      "cell_type": "markdown",
@@ -251,7 +258,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 6
     },
     {
      "cell_type": "markdown",
@@ -288,7 +296,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -319,7 +328,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 8
     },
     {
      "cell_type": "markdown",
@@ -354,7 +364,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -386,7 +397,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -424,7 +436,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -444,17 +457,18 @@
      "input": [
       "def null_vector(vec_length):\n",
       "    r'''\n",
-      "    >>> null_vector(1)\n",
+      "    >>> import numpy as np; null_vector(1)\n",
       "    array([ 0.])\n",
-      "    >>> null_vector(2)\n",
+      "    >>> import numpy as np; null_vector(2)\n",
       "    array([ 0.,  0.])\n",
-      "    >>> null_vector(4)\n",
+      "    >>> import numpy as np; null_vector(4)\n",
       "    array([ 0.,  0.,  0.,  0.])\n",
       "   '''"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 12
     },
     {
      "cell_type": "markdown",
@@ -474,16 +488,17 @@
      "input": [
       "def checkboard():\n",
       "    r'''\n",
-      "    >>> checkboard()\n",
+      "    >>> import numpy as np; checkboard()\n",
       "    array([[ 0.,  1.,  0.,  1.],\n",
-      "       [ 1.,  0.,  1.,  0.],\n",
-      "       [ 0.,  1.,  0.,  1.],\n",
-      "       [ 1.,  0.,  1.,  0.]])\n",
+      "           [ 1.,  0.,  1.,  0.],\n",
+      "           [ 0.,  1.,  0.,  1.],\n",
+      "           [ 1.,  0.,  1.,  0.]])\n",
       "    '''"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 13
     },
     {
      "cell_type": "markdown",
@@ -503,14 +518,14 @@
      "input": [
       "def matrix_from_lists(a,b,c):\n",
       "    r'''\n",
-      "    >>> matrix_from_lists([0,1],[0,1],[0,1])\n",
+      "    >>> import numpy as np; matrix_from_lists([0,1],[0,1],[0,1])\n",
       "    array([[0, 1],\n",
       "           [0, 1],\n",
       "           [0, 1]])\n",
-      "    >>> matrix_from_lists([0,1],[0,1])\n",
+      "    >>> import numpy as np; matrix_from_lists([0,1],[0,1])\n",
       "    array([[0, 1],\n",
       "           [0, 1]])\n",
-      "    >>> matrix_from_lists([0,0,0],[1,1,1],[2,2,2])\n",
+      "    >>> import numpy as np; matrix_from_lists([0,0,0],[1,1,1],[2,2,2])\n",
       "    array([[0, 0, 0],\n",
       "           [1, 1, 1],\n",
       "           [2, 2, 2]])\n",
@@ -518,7 +533,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -538,19 +554,20 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "gen_poly(x, a, b, c):\n",
+      "def gen_poly(x, a, b, c):\n",
       "    r'''\n",
-      "    >>>gen_poly(np.linspace(1,10,10), 1, 1, 0)\n",
+      "    >>> import numpy as np; gen_poly(np.linspace(1,10,10), 1, 1, 0)\n",
       "    array([   2.,    6.,   12.,   20.,   30.,   42.,   56.,   72.,   90.,  110.])\n",
-      "    >>>gen_poly(np.linspace(1,10,10), 2, 1, 0)\n",
+      "    >>> import numpy as np; gen_poly(np.linspace(1,10,10), 2, 1, 0)\n",
       "    array([   3.,   10.,   21.,   36.,   55.,   78.,  105.,  136.,  171.,  210.])\n",
-      "    >>>gen_poly(np.linspace(0,1,5), 1, 5, 5)\n",
+      "    >>> import numpy as np; gen_poly(np.linspace(0,1,5), 1, 5, 5)\n",
       "    array([  5.    ,   6.3125,   7.75  ,   9.3125,  11.    ])\n",
       "    '''"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -573,17 +590,18 @@
      "input": [
       "def fit_poly(x,y):\n",
       "    r'''\n",
-      "    >>>fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 1, 1, 0) )\n",
+      "    >>> import numpy as np; fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 1, 1, 0) )\n",
       "    array([ 1.,  1.,  0.])\n",
-      "    >>>fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 2, 1, 0) )\n",
+      "    >>> import numpy as np; fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 2, 1, 0) )\n",
       "    array([ 2.,  1.,  0.])\n",
-      "    >>>fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 3, 1, 1) )\n",
+      "    >>> import numpy as np; fit_poly( np.linspace(1,10,10), gen_poly(np.linspace(1,10,10), 3, 1, 1) )\n",
       "    array([ 3.,  1.,  1.])\n",
       "    '''"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -606,13 +624,14 @@
      "input": [
       "def plot_data(x,a,b,c):\n",
       "    r'''\n",
-      "    >>> plot_data(np.linspace(1,10,100), 1, 1, 0)\n",
-      "    None\n",
+      "    >>> import numpy as np; plot_data(np.linspace(1,10,100), 1, 1, 0)\n",
+      "    Nothing\n",
       "    '''"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -652,13 +671,23 @@
      "input": [
       "def multi_plot_data(x,a,b,c):\n",
       "    r'''\n",
-      "    >>>multi_plot_data(np.linspace(1,10,100), 1, 1, 0)\n",
-      "    None\n",
+      "    >>> import numpy as np; multi_plot_data(np.linspace(1,10,100), 1, 1, 0)\n",
+      "    Nothing\n",
       "    '''"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 18
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 21
     }
    ],
    "metadata": {}
