--- a/CMP_Y2/workshop_2/scientific_python.ipynb
+++ b/CMP_Y2/workshop_2/scientific_python.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:45bc87095796fd05804539329c5013840cd92b67d150061d5c50cf20b6fb666f"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
