--- a/CMP_Y2/workshop_3/advanced_python.ipynb
+++ b/CMP_Y2/workshop_3/advanced_python.ipynb
@@ -1,6 +1,7 @@
 {
  "metadata": {
-  "name": ""
+  "name": "",
+  "signature": "sha256:f6c517c65637355ce4d0e242e72ddb64fd63693fd4d005a8a76260cc0e3ceb38"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -320,7 +321,9 @@
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "params,conv = curve_fit(lambda x,A,a: A*exp(a*x**2),data[:,0],data[:,1])"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
