Initial small changes.

--- a/C_Y1/workshop1/intro_to_pylab.ipynb
+++ b/C_Y1/workshop1/intro_to_pylab.ipynb
@@ -9,7 +9,7 @@
    "language": "python",
    "name": "python2"
   },
-  "name": "",
+  "name": "intro_to_pylab",
   "signature": "sha256:6d9334eae5dbb55e47f33937d112b185d214d9f4b717782f8bb5efd9969ffeec"
  },
  "nbformat": 3,
@@ -508,11 +508,13 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Populating the interactive namespace from numpy and matplotlib\n"
+        "\n",
+        "Welcome to pylab, a matplotlib-based Python environment [backend: module://IPython.zmq.pylab.backend_inline].\n",
+        "For more information, type 'help(pylab)'.\n"
        ]
       }
      ],
-     "prompt_number": 335
+     "prompt_number": 1
     },
     {
      "cell_type": "markdown",
@@ -1494,7 +1496,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Current limits of the figure are a bit too tight and we want to make some space in order to clearly see all data points.\n",
+      "Current limits of the figure are a bit too tight and we want to make some space in order to clearly see all data points we can use function **xlim** and **ylim**.\n",
       "\n",
       "\n",
       "    figure(figsize=(10,6), dpi=80)\n",
@@ -1546,7 +1548,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Current ticks are not ideal because they do not show the interesting values (+/-\u03c0,+/-\u03c0/2) for sine and cosine. We'll change them such that they show only these values.\n",
+      "Current ticks are not ideal because they do not show the interesting values (+/-\u03c0,+/-\u03c0/2) for sine and cosine. We'll change them using **xticks** and **yticks** such that they show only these values.\n",
       "\n",
       "    figure(figsize=(10,6), dpi=80)\n",
       "    plot(X, C, color=\"blue\", linewidth=2.5, linestyle=\"-\")\n",
