Fix problem with displaying external figures.

--- a/C_Y1/workshop1/intro_to_pylab.ipynb
+++ b/C_Y1/workshop1/intro_to_pylab.ipynb
@@ -949,7 +949,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<img src=\"numpy_indexing.png\" />\n",
+      "<img src=\"files/numpy_indexing.png\" />\n",
       "\n"
      ]
     },
@@ -1932,7 +1932,7 @@
       "\n",
       "Currently the solutions are superimposed. People often produce plots where they are seperated by shifting each function up along the y-axis by a different amount. Modify the code given below to reproduce the following image:\n",
       "\n",
-      "<img src=particle_in_box.png></img>"
+      "<img src=\"files/particle_in_box.png\" />"
      ]
     },
     {
@@ -2000,7 +2000,7 @@
       "The force between the two particles is equal to minus the derivative of the potential: - $\\frac{dV(r)}{dr}$. In this exercise we would like to add a line corresponding to the force superimposed on scatter plot of the potential energy. You'll also need to add, a title, label the x axis, create a legend and if you can, move the spines.\n",
       "\n",
       "\n",
-      "<img src=morse_exercise.png></img>"
+      "<img src=\"files/morse_exercise.png\">"
      ]
     },
     {
@@ -2078,7 +2078,7 @@
      "source": [
       "In this exercise you will modify the cell below such that the resulting scatter plot gains this appearance:\n",
       "    \n",
-      "<img src='scatter_exercise.png'></img>\n",
+      "<img src='files/scatter_exercise.png'>\n",
       "\n",
       "If we consider each point as a vector beginning at the origin and ending at the point then we can associate with each point the angle defined between its vector and the x-axis. Given the x and y coordinates of the point we can compute this angle via $\\tan^{-1} (\\frac{y}{x})$. The function to do this in a code cell is *arctan2(x,y)* \n",
       "\n",
@@ -2163,7 +2163,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Reference"
+      "<a id=\"reference\"></a>Reference"
      ]
     },
     {
@@ -2200,71 +2200,71 @@
       "<tbody valign=\"top\">\n",
       "<tr><td>alpha (or a)</td>\n",
       "<td>number [0-1] - transparency</td>\n",
-      "<td><img alt=\"figures/alpha.png\" class=\"first last\" src=\"figures/alpha.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/alpha.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>antialiased</td>\n",
       "<td>True|False - antialised rendering</td>\n",
-      "<td><img alt=\"figures/aliased.png\" class=\"first\" src=\"figures/aliased.png\">\n",
-      "<img alt=\"figures/antialiased.png\" class=\"last\" src=\"figures/antialiased.png\">\n",
+      "<td><img class=\"first\" src=\"files/figures/aliased.png\" />\n",
+      "<img class=\"last\" src=\"files/figures/antialiased.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>color (or c)</td>\n",
       "<td>[color](http://matplotlib.org/api/colors_api.html#module-matplotlib.colors) argument - master colour</td>\n",
-      "<td><img alt=\"figures/color.png\" class=\"first last\" src=\"figures/color.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/color.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>linestyle (or ls)</td>\n",
-      "<td>string - see <a class=\"reference internal\">line styles</a> below</td>\n",
+      "<td>string - see <a class=\"reference internal\" href=\"#line_styles\">line styles</a> below</td>\n",
       "<td>&nbsp;</td>\n",
       "</tr>\n",
       "<tr><td>linewidth (or lw)</td>\n",
       "<td>number - the line width in points</td>\n",
-      "<td><img alt=\"figures/linewidth.png\" class=\"first last\" src=\"figures/linewidth.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/linewidth.png\" >\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>solid_capstyle</td>\n",
       "<td>\u2018butt\u2019|\u2018round\u2019|\u2018projecting\u2019 - sets cap style</td>\n",
-      "<td><img alt=\"figures/solid_capstyle.png\" class=\"first last\" src=\"figures/solid_capstyle.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/solid_capstyle.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>solid_joinstyle</td>\n",
       "<td>\u2018miter\u2019|\u2018round\u2019|\u2018bevel\u2019 - join style for solid lines</td>\n",
-      "<td><img alt=\"figures/solid_joinstyle.png\" class=\"first last\" src=\"figures/solid_joinstyle.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/solid_joinstyle.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>dash_capstyle</td>\n",
       "<td>\u2018butt\u2019|\u2018round\u2019|\u2018projecting\u2019 - cap style for dashes</td>\n",
-      "<td><img alt=\"figures/dash_capstyle.png\" class=\"first last\" src=\"figures/dash_capstyle.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/dash_capstyle.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>dash_joinstyle</td>\n",
       "<td>\u2018miter\u2019|\u2018round\u2019|\u2018bevel\u2019 - join style for dashes</td>\n",
-      "<td><img alt=\"figures/dash_joinstyle.png\" class=\"first last\" src=\"figures/dash_joinstyle.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/dash_joinstyle.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>marker</td>\n",
-      "<td>number/string - see <a class=\"reference internal\">markers</a> below</td>\n",
+      "<td>number/string - see <a class=\"reference internal\" href=\"#marker_styles\">markers</a> below</td>\n",
       "<td>&nbsp;</td>\n",
       "</tr>\n",
       "<tr><td>markeredgewidth (mew)</td>\n",
       "<td>number - line width around the marker symbol</td>\n",
-      "<td><img alt=\"figures/mew.png\" class=\"first last\" src=\"figures/mew.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/mew.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>markeredgecolor (mec)</td>\n",
       "<td>[color](http://matplotlib.org/api/colors_api.html#module-matplotlib.colors) - edge color if a marker is used</td>\n",
-      "<td><img alt=\"figures/mec.png\" class=\"first last\" src=\"figures/mec.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/mec.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>markerfacecolor (mfc)</td>\n",
       "<td>[color](http://matplotlib.org/api/colors_api.html#module-matplotlib.colors) - face color if a marker is used</td>\n",
-      "<td><img alt=\"figures/mfc.png\" class=\"first last\" src=\"figures/mfc.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/mfc.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>markersize (ms)</td>\n",
       "<td>number - size of the marker in points</td>\n",
-      "<td><img alt=\"figures/ms.png\" class=\"first last\" src=\"figures/ms.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/ms.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "</tbody>\n",
@@ -2276,7 +2276,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Line Styles"
+      "<a id=\"line_styles\"></a>Line Styles"
      ]
     },
     {
@@ -2307,22 +2307,22 @@
       "<tbody valign=\"top\">\n",
       "<tr><td><tt class=\"docutils literal\">'-'</tt></td>\n",
       "<td>solid line</td>\n",
-      "<td><img alt=\"figures/linestyle--.png\" class=\"first last\" src=\"figures/linestyle--.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/linestyle--.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\"><span class=\"pre\">'--'</span></tt></td>\n",
       "<td>dashed line</td>\n",
-      "<td><img alt=\"figures/linestyle---.png\" class=\"first last\" src=\"figures/linestyle---.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/linestyle---.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\"><span class=\"pre\">'-.'</span></tt></td>\n",
       "<td>dash-dot line</td>\n",
-      "<td><img alt=\"figures/linestyle--dot.png\" class=\"first last\" src=\"figures/linestyle--dot.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/linestyle--dot.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">':'</tt></td>\n",
       "<td>dotted line</td>\n",
-      "<td><img alt=\"figures/linestyle-:.png\" class=\"first last\" src=\"figures/linestyle-:.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/linestyle-:.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "</tbody>\n",
@@ -2334,7 +2334,7 @@
      "level": 2,
      "metadata": {},
      "source": [
-      "Marker styles"
+      "<a id=\"marker_styles\"></a>Marker styles"
      ]
     },
     {
@@ -2365,162 +2365,162 @@
       "<tbody valign=\"top\">\n",
       "<tr><td>0</td>\n",
       "<td>tick left</td>\n",
-      "<td><img alt=\"figures/marker-i0.png\" class=\"first last\" src=\"figures/marker-i0.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-i0.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>1</td>\n",
       "<td>tick right</td>\n",
-      "<td><img alt=\"figures/marker-i1.png\" class=\"first last\" src=\"figures/marker-i1.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-i1.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>2</td>\n",
       "<td>tick up</td>\n",
-      "<td><img alt=\"figures/marker-i2.png\" class=\"first last\" src=\"figures/marker-i2.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-i2.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>3</td>\n",
       "<td>tick down</td>\n",
-      "<td><img alt=\"figures/marker-i3.png\" class=\"first last\" src=\"figures/marker-i3.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-i3.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>4</td>\n",
       "<td>caret left</td>\n",
-      "<td><img alt=\"figures/marker-i4.png\" class=\"first last\" src=\"figures/marker-i4.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-i4.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>5</td>\n",
       "<td>caret right</td>\n",
-      "<td><img alt=\"figures/marker-i5.png\" class=\"first last\" src=\"figures/marker-i5.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-i5.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>6</td>\n",
       "<td>caret up</td>\n",
-      "<td><img alt=\"figures/marker-i6.png\" class=\"first last\" src=\"figures/marker-i6.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-i6.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td>7</td>\n",
       "<td>caret down</td>\n",
-      "<td><img alt=\"figures/marker-i7.png\" class=\"first last\" src=\"figures/marker-i7.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-i7.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'o'</tt></td>\n",
       "<td>circle</td>\n",
-      "<td><img alt=\"figures/marker-o.png\" class=\"first last\" src=\"figures/marker-o.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-o.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'D'</tt></td>\n",
       "<td>diamond</td>\n",
-      "<td><img alt=\"figures/marker-dd.png\" class=\"first last\" src=\"figures/marker-dd.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-dd.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'h'</tt></td>\n",
       "<td>hexagon 1</td>\n",
-      "<td><img alt=\"figures/marker-h.png\" class=\"first last\" src=\"figures/marker-h.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-h.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'H'</tt></td>\n",
       "<td>hexagon 2</td>\n",
-      "<td><img alt=\"figures/marker-hh.png\" class=\"first last\" src=\"figures/marker-hh.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-hh.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'\\_'</tt></td>\n",
       "<td>horizontal line</td>\n",
-      "<td><img alt=\"figures/marker-_.png\" class=\"first last\" src=\"figures/marker-_.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-_.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'1'</tt></td>\n",
       "<td>tripod down</td>\n",
-      "<td><img alt=\"figures/marker-1.png\" class=\"first last\" src=\"figures/marker-1.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-1.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'2'</tt></td>\n",
       "<td>tripod up</td>\n",
-      "<td><img alt=\"figures/marker-2.png\" class=\"first last\" src=\"figures/marker-2.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-2.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'3'</tt></td>\n",
       "<td>tripod left</td>\n",
-      "<td><img alt=\"figures/marker-3.png\" class=\"first last\" src=\"figures/marker-3.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-3.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'4'</tt></td>\n",
       "<td>tripod right</td>\n",
-      "<td><img alt=\"figures/marker-4.png\" class=\"first last\" src=\"figures/marker-4.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-4.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'8'</tt></td>\n",
       "<td>octagon</td>\n",
-      "<td><img alt=\"figures/marker-8.png\" class=\"first last\" src=\"figures/marker-8.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-8.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'p'</tt></td>\n",
       "<td>pentagon</td>\n",
-      "<td><img alt=\"figures/marker-p.png\" class=\"first last\" src=\"figures/marker-p.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-p.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'^'</tt></td>\n",
       "<td>triangle up</td>\n",
-      "<td><img alt=\"figures/marker-^.png\" class=\"first last\" src=\"figures/marker-^.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-^.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'v'</tt></td>\n",
       "<td>triangle down</td>\n",
-      "<td><img alt=\"figures/marker-v.png\" class=\"first last\" src=\"figures/marker-v.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-v.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'&lt;'</tt></td>\n",
       "<td>triangle left</td>\n",
-      "<td><img alt=\"figures/marker-<.png\" class=\"first last\" src=\"figures/marker-&lt;.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-&lt;.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'&gt;'</tt></td>\n",
       "<td>triangle right</td>\n",
-      "<td><img alt=\"figures/marker->.png\" class=\"first last\" src=\"figures/marker-&gt;.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-&gt;.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'d'</tt></td>\n",
       "<td>thin diamond</td>\n",
-      "<td><img alt=\"figures/marker-d.png\" class=\"first last\" src=\"figures/marker-d.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-d.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">','</tt></td>\n",
       "<td>pixel</td>\n",
-      "<td><img alt=\"figures/marker-,.png\" class=\"first last\" src=\"figures/marker-,.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-,.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'+'</tt></td>\n",
       "<td>plus</td>\n",
-      "<td><img alt=\"figures/marker-+.png\" class=\"first last\" src=\"figures/marker-+.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-+.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'.'</tt></td>\n",
       "<td>point</td>\n",
-      "<td><img alt=\"figures/marker-dot.png\" class=\"first last\" src=\"figures/marker-dot.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-dot.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'s'</tt></td>\n",
       "<td>square</td>\n",
-      "<td><img alt=\"figures/marker-s.png\" class=\"first last\" src=\"figures/marker-s.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-s.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'\\*'</tt></td>\n",
       "<td>star</td>\n",
-      "<td><img alt=\"figures/marker-*.png\" class=\"first last\" src=\"figures/marker-*.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-*.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'|'</tt></td>\n",
       "<td>vertical line</td>\n",
-      "<td><img alt=\"figures/marker-|.png\" class=\"first last\" src=\"figures/marker-|.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-|.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\">'x'</tt></td>\n",
       "<td>cross</td>\n",
-      "<td><img alt=\"figures/marker-x.png\" class=\"first last\" src=\"figures/marker-x.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-x.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "<tr><td><tt class=\"docutils literal\"><span class=\"pre\">r'\\$\\sqrt{2}\\$'</span></tt></td>\n",
       "<td>any latex expression</td>\n",
-      "<td><img alt=\"figures/marker-latex.png\" class=\"first last\" src=\"figures/marker-latex.png\">\n",
+      "<td><img class=\"first last\" src=\"files/figures/marker-latex.png\" />\n",
       "</td>\n",
       "</tr>\n",
       "</tbody>\n",
